exports[`Battery classCompile matches snapshot 1`] = `
Object {
  "py1": Object {
    "padding-bottom": "0.6rem",
    "padding-top": "0.6rem",
  },
}
`;

exports[`Battery positionCoordinateProps matches snapshot 1`] = `
Object {
  "bottom": Array [
    Object {
      "propName": "b",
      "props": Array [
        "bottom",
      ],
    },
  ],
  "left": Array [
    Object {
      "propName": "l",
      "props": Array [
        "left",
      ],
    },
  ],
  "right": Array [
    Object {
      "propName": "r",
      "props": Array [
        "right",
      ],
    },
  ],
  "top": Array [
    Object {
      "propName": "t",
      "props": Array [
        "top",
      ],
    },
  ],
}
`;

exports[`Battery propsCompile matches snapshot 1`] = `
Object {
  "margin": Array [
    Object {
      "propName": "m",
      "props": Array [
        "margin",
      ],
    },
    Object {
      "propName": "mt",
      "props": Array [
        "margin-top",
      ],
    },
    Object {
      "propName": "mx",
      "props": Array [
        "margin-right",
        "margin-left",
      ],
    },
  ],
  "padding": Array [
    Object {
      "propName": "p",
      "props": Array [
        "padding",
      ],
    },
    Object {
      "propName": "pt",
      "props": Array [
        "padding-top",
      ],
    },
    Object {
      "propName": "px",
      "props": Array [
        "padding-right",
        "padding-left",
      ],
    },
  ],
}
`;

exports[`Battery propsValuesMerge matches snapshot 1`] = `[Function]`;

exports[`Battery scaleUnits matches snapshot 1`] = `
Array [
  Object {
    "value": "0rem",
    "valueName": "0",
  },
  Object {
    "value": "0.6rem",
    "valueName": "1",
  },
  Object {
    "value": "1.2rem",
    "valueName": "2",
  },
  Object {
    "value": "1.8rem",
    "valueName": "3",
  },
  Object {
    "value": "2.4rem",
    "valueName": "4",
  },
  Object {
    "value": "3rem",
    "valueName": "5",
  },
  Object {
    "value": "3.6rem",
    "valueName": "6",
  },
  Object {
    "value": "4.2rem",
    "valueName": "7",
  },
  Object {
    "value": "4.8rem",
    "valueName": "8",
  },
  Object {
    "value": "5.4rem",
    "valueName": "9",
  },
  Object {
    "value": "6rem",
    "valueName": "10",
  },
  Object {
    "value": "6.6rem",
    "valueName": "11",
  },
  Object {
    "value": "7.2rem",
    "valueName": "12",
  },
  Object {
    "value": "7.8rem",
    "valueName": "13",
  },
  Object {
    "value": "8.4rem",
    "valueName": "14",
  },
  Object {
    "value": "9rem",
    "valueName": "15",
  },
  Object {
    "value": "9.6rem",
    "valueName": "16",
  },
  Object {
    "value": "10.2rem",
    "valueName": "17",
  },
  Object {
    "value": "10.8rem",
    "valueName": "18",
  },
  Object {
    "value": "11.4rem",
    "valueName": "19",
  },
  Object {
    "value": "12rem",
    "valueName": "20",
  },
]
`;

exports[`Battery spacingProps matches snapshot 1`] = `
Object {
  "margin": Array [
    Object {
      "propName": "m",
      "props": Array [
        "margin",
      ],
    },
    Object {
      "propName": "mt",
      "props": Array [
        "margin-top",
      ],
    },
    Object {
      "propName": "mr",
      "props": Array [
        "margin-right",
      ],
    },
    Object {
      "propName": "mb",
      "props": Array [
        "margin-bottom",
      ],
    },
    Object {
      "propName": "ml",
      "props": Array [
        "margin-left",
      ],
    },
    Object {
      "propName": "mx",
      "props": Array [
        "margin-right",
        "margin-left",
      ],
    },
    Object {
      "propName": "my",
      "props": Array [
        "margin-top",
        "margin-bottom",
      ],
    },
  ],
  "padding": Array [
    Object {
      "propName": "p",
      "props": Array [
        "padding",
      ],
    },
    Object {
      "propName": "pt",
      "props": Array [
        "padding-top",
      ],
    },
    Object {
      "propName": "pr",
      "props": Array [
        "padding-right",
      ],
    },
    Object {
      "propName": "pb",
      "props": Array [
        "padding-bottom",
      ],
    },
    Object {
      "propName": "pl",
      "props": Array [
        "padding-left",
      ],
    },
    Object {
      "propName": "px",
      "props": Array [
        "padding-right",
        "padding-left",
      ],
    },
    Object {
      "propName": "py",
      "props": Array [
        "padding-top",
        "padding-bottom",
      ],
    },
  ],
}
`;
